Fixed a problem with the wrapping of hyperlinks.

--- a/src/css/bootstrap-5-plus-plus.css
+++ b/src/css/bootstrap-5-plus-plus.css
@@ -50,6 +50,14 @@ html {
   filter: invert(68%) sepia(69%) saturate(0%) hue-rotate(214deg) brightness(98%) contrast(88%);
 }
 
+.wordwrap{
+  /* Source: https://stackoverflow.com/a/1638824 */
+  white-space: pre-wrap; /* CSS3 */
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* IE */
+}
+
 
 /******************************************************************************
  * Orientations
